fixed horizontal scroll

--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,6 @@ body {
 .container {
   max-width: 1400px;
   margin: 0 auto;
-  padding: 50px;
-  padding-top: 0;
 }
 .grid {
   display: grid;
